--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "1.0.0",
   "scripts": {
     "postinstall": "npm run typings install",
-    "lite": "lite-server",
+    "lite": "lite-server -c lite-config.json",
     "gulp": "gulp",
     "start": "concurrent \"npm run gulp\" \"npm run lite\"",
-    "auto-test": "\"npm run gulp watch-test\"",
+    "auto-test": "npm run gulp watch-test",
     "typings": "typings"
   },
   "license": "ISC",
   "dependencies": {
     "angular2": "2.0.0-beta.9",
-    "angularfire2": "^2.0.0-alpha.13",
+    "del": "^2.2.0",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.33.3",
     "gulp": "^3.9.1",
@@ -29,6 +29,7 @@
     "chai": "^3.5.0",
     "concurrently": "^1.0.0",
     "cssnano": "^3.4.0",
+    "del": "^2.2.0",
     "gulp": "^3.9.0",
     "gulp-ext-replace": "^0.2.0",
     "gulp-imagemin": "^2.4.0",
@@ -41,7 +42,6 @@
     "postcss": "^5.0.13",
     "postcss-scss": "^0.1.3",
     "precss": "^1.3.0",
-    "tsd": "^0.6.5-beta",
     "typings": "^0.6.8"
   }
 }
