--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "angular2-boilerplate",
   "version": "1.0.0",
   "scripts": {
-    "postinstall": "npm run typings install",
-    "lite": "lite-server -c lite-config.json",
+    "postinstall": "typings install",
+    "lite": "lite-server -c .config/lite-config.json",
+    "karma": "./node_modules/karma/bin/karma start",
     "gulp": "gulp",
-    "start": "concurrent \"npm run gulp\" \"npm run lite\"",
+    "start": "concurrent \"npm run gulp\" \"npm run lite\" \"npm run karma\"",
     "auto-test": "npm run gulp watch-test",
     "typings": "typings"
   },
@@ -13,12 +14,9 @@
   "dependencies": {
     "angular2": "2.0.0-beta.9",
     "del": "^2.2.0",
-    "es6-promise": "^3.0.2",
     "es6-shim": "^0.33.3",
     "gulp": "^3.9.1",
-    "gulp-mocha": "^2.2.0",
     "gulp-util": "^3.0.7",
-    "mocha": "^2.4.5",
     "reflect-metadata": "^0.1.2",
     "rxjs": "5.0.0-beta.2",
     "systemjs": "0.19.24",
@@ -26,19 +24,19 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.2.1",
-    "chai": "^3.5.0",
     "concurrently": "^1.0.0",
     "cssnano": "^3.4.0",
-    "del": "^2.2.0",
-    "gulp": "^3.9.0",
     "gulp-ext-replace": "^0.2.0",
     "gulp-imagemin": "^2.4.0",
     "gulp-postcss": "^6.0.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-typescript": "^2.10.0",
     "gulp-uglify": "^1.5.1",
+    "jasmine-core": "2.4.1",
+    "karma": "^0.13.22",
+    "karma-chrome-launcher": "^0.2.3",
+    "karma-jasmine": "^0.3.8",
     "lite-server": "^2.0.1",
-    "mocha": "^2.4.5",
     "postcss": "^5.0.13",
     "postcss-scss": "^0.1.3",
     "precss": "^1.3.0",
